# webflux/example/src/main/java/io/github/sbracely/extended/problem/detail/webflux/example/controller/FluxExtendedProblemDetailController.java
@@ -208,6 +208,11 @@ public class FluxExtendedProblemDetailController {
                                   "type": "MODEL_ATTRIBUTE",
                                   "target": "confirmPassword",
                                   "message": "Password and confirm password do not match"
+                                },
+                                {
+                                  "type": "MODEL_ATTRIBUTE",
+                                  "target": "address.street",
+                                  "message": "Street cannot be blank"
                                 }
                               ]
                             }
