# webmvc/example/src/main/java/io/github/sbracely/extended/problem/detail/webmvc/example/controller/MvcProblemDetailController.java
@@ -387,7 +387,10 @@ public class MvcProblemDetailController {
             examples = @ExampleObject(name = "example", value = """
                     {
                       "name": "abc",
-                      "password": "123"
+                      "password": "123",
+                      "address": {
+                        "street": ""
+                      }
                     }
                     """)))
     @ApiResponse(
@@ -422,6 +425,11 @@ public class MvcProblemDetailController {
                                   "type": "REQUEST_BODY",
                                   "target": "confirmPassword",
                                   "message": "Password and confirm password do not match"
+                                },
+                                {
+                                  "type": "REQUEST_BODY",
+                                  "target": "address.street",
+                                  "message": "Street cannot be blank"
                                 }
                               ]
                             }
@@ -943,12 +951,15 @@ public class MvcProblemDetailController {
      */
     @io.swagger.v3.oas.annotations.parameters.RequestBody(content = @Content(
             mediaType = MediaType.APPLICATION_JSON_VALUE,
-            examples = @ExampleObject(name = "example", value = """
-                    {
-                      "name": "abc",
-                      "password": "123"
-                    }
-                    """)))
+                    examples = @ExampleObject(name = "example", value = """
+                            {
+                              "name": "abc",
+                              "password": "123",
+                              "address": {
+                                "street": ""
+                              }
+                            }
+                            """)))
     @ApiResponse(
             responseCode = "400",
             description = "WebExchangeBindException",
@@ -981,6 +992,11 @@ public class MvcProblemDetailController {
                                   "type": "MODEL_ATTRIBUTE",
                                   "target": "confirmPassword",
                                   "message": "Password and confirm password do not match"
+                                },
+                                {
+                                  "type": "MODEL_ATTRIBUTE",
+                                  "target": "address.street",
+                                  "message": "Street cannot be blank"
                                 }
                               ]
                             }
